--- a/promotions-fe.html
+++ b/promotions-fe.html
@@ -130,23 +130,23 @@
   
   <section class="promotions">
     <div class="box-container">
-      <div class="promotions-title">
+      <div class="promotions-hero-content">
         <h1>Starter Pack Promotion</h1>
         <p>Comprehensive CV writing, LinkedIn optimisation, and cover letter services tailored to meet International recruitment standards and applicant tracking system requirements.</p>
         <h2>Included in this package : </h2>
         <ul>
-          <li>3 - 5 Page ATS-friendly CV</li>
-          <li>1 Page Editable Cover Letter</li>
-          <li>Optimized LinkedIn Profile</li>
-          <li>LinkedIn Background Image</li>
-          <li>3 - 5 Day Turnaround Time</li>
+          <li> <span>✔</span> 3 - 5 Page ATS-friendly CV</li>
+          <li> <span>✔</span> 1 Page Editable Cover Letter</li>
+          <li> <span>✔</span> Optimized LinkedIn Profile</li>
+          <li> <span>✔</span> LinkedIn Background Image</li>
+          <li> <span>✔</span> 3 - 5 Day Turnaround Time</li>
         </ul>
         <div class="price">
           <p>Was <br> R625</p>
           <p>Now <br> R450</p>
         </div>
         <p class="save">Save R175</p>
-        <a href="./promotions.html#contact">Get A Quote</a>
+        <a class="btn" href="./promotions.html#contact">Get A Quote</a>
       </div>
       <div class="video-box">
         <video class="promo-video" autoplay loop muted>
@@ -316,12 +316,7 @@
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script type="module" src="/src/mcjs.js"></script>
   <script type="module" src="/src/gtag-init.js"></script>
-  <script>
-  document.getElementById('contactForm').addEventListener('submit', function(e) {
-    e.preventDefault();
-    gtag_report_conversion(this); // Pass the form element
-  });
-  </script>
+  <script type="module" src="/src/contact-form-handler.js"></script>
   <script type="module" src="/src/loader.js"></script>
   <script type="module" src="/src/main.js"></script>
 </body>
