--- a/index.html
+++ b/index.html
@@ -187,23 +187,26 @@
     </nav>
     <!-- Hero Section Begins -->
     <section class="hero" id="hero">
-      <div class="content">
-        <h1>Professional, Affordable CVs That Get You Hired</h1>
-        <h2>Still waiting for that interview call?<br> We know why, and we know how to fix it!</h2>
-        <p>If your CV doesn't show your experience, skills, and qualifications clearly and professionally, recruiters will move on.</p>
-        <p>We create targeted, results-driven CVs that speak to what hiring managers are really looking for.</p>
-        <div class="buttons">
-          <a href="#contact" class="btn" aria-label="get a quote in the contact us section">Get a Free Quote</a>
-          <a href="#pricing" class="btn" aria-label="go to the pricing section">See Prices</a>
-          <a href="promotions-fe.html" class="btn" aria-label="go to the pricing section">See Promotions</a>
-      </div>
+      <div class="hero-content-box">
+        <div class="content">
+          <h1>Professional, Affordable CVs That Get You Hired</h1>
+          <h2>Still waiting for that interview call?<br> We know why,<br> and we know how to fix it!</h2>
+          <p>If your CV doesn't show your experience, skills, and qualifications clearly and professionally, recruiters will move on.</p>
+          <p>We create targeted, results-driven CVs that speak to what hiring managers are really looking for.</p>
+          <div class="buttons">
+            <a href="#contact" class="btn" aria-label="get a quote in the contact us section">Get a Free Quote</a>
+            <a href="#pricing" class="btn" aria-label="go to the pricing section">See Prices</a>
+            <a href="promotions-fe.html" class="btn" aria-label="go to the pricing section">See Promotions</a>
+        </div>
       </div>
       <div class="hero-video">
-        <video autoplay muted playsinline loop aria-label="Hero Video">
+        <video autoplay muted loop aria-label="Hero Video">
           <source src="/videos/ATS_-_FriendlyProven_Results.mp4" type="video/mp4">
           Your browser does not support the video tag.
-          </video>
+        </video>
       </div>
+      </div>
+      
     </section>
     <!-- pricing section begins -->
     <section class="pricing" id="pricing">
