--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
     <section class="hero" id="hero">
       <div class="hero-content-box">
         <div class="content">
-          <h1>Professional, Affordable CVs That Get You Hired</h1>
-          <h2>Still waiting for that interview call?<br> We know why,<br> and we know how to fix it!</h2>
-          <p>If your CV doesn't show your experience, skills, and qualifications clearly and professionally, recruiters will move on.</p>
-          <p>We create targeted, results-driven CVs that speak to what hiring managers are really looking for.</p>
+          <h1>Professional, Affordable<br> CVs That Get You Hired</h1>
+          <h2>Still waiting<br> for that interview call?<br> We know why,<br> and we know how to fix it!</h2>
+          <p>If your CV doesn't show your experience,<br> skills, and qualifications<br> clearly and professionally, recruiters will move on.</p>
+          <p>We create targeted, results-driven CVs<br> that speak to what hiring managers are really looking for.</p>
           <div class="buttons">
             <a href="#contact" class="btn" aria-label="get a quote in the contact us section">Get a Free Quote</a>
             <a href="#pricing" class="btn" aria-label="go to the pricing section">See Prices</a>
