fixed all broken links

--- a/blog.html
+++ b/blog.html
@@ -117,7 +117,7 @@
     <nav>
         <!-- logo -->
         <div class="logo">
-        <a href="index.html" title="Welcome To Cv Civets" aria-label="Go to homepage">
+        <a href="/index.html" title="Welcome To Cv Civets" aria-label="Go to homepage">
             <img src="/logo.png" loading="lazy" alt="CV Civets logo" title="Return Home">
         </a>
         </div>
@@ -130,7 +130,7 @@
         <div id="navbar" class="navbar" aria-label="Main navigation">
         <ul aria-label="Main navigation">
             <li>
-                <a class="nav-link active" href="index.html" title="Go To Home Page" aria-label="Home page">Home</a>
+                <a class="nav-link active" href="/index.html" title="Go To Home Page" aria-label="Home page">Home</a>
             </li>
             <li>
                 <a class="nav-link" href="#blog-posts" title="Go To Blog Posts Section" aria-label="Blog posts section">Blog Posts</a>
@@ -450,9 +450,9 @@
       <div class="quick-links footer-box">
           <h2>Quick Links</h2>
             <ul>
-                <li><a href="index.html" class="footer-links" title="Go To Home Page" aria-label="Go to Home page">Home</a></li>
+                <li><a href="/index.html" class="footer-links" title="Go To Home Page" aria-label="Go to Home page">Home</a></li>
                 <li><a href="" class="#posts" title="Go To Blog Posts Section" aria-label="Go to Blog page">Blog Posts</a></li>
-                <li><a href="/pages/articles/article-1.html" class="footer-links" title="Go To The Next Article" aria-label="Go To Next Article">Next Article</a></li>
+                <li><a href="/assets/articles/article-1.html" class="footer-links" title="Go To The Next Article" aria-label="Go To Next Article">Next Article</a></li>
             </ul>
       </div>
       <div class="contact-footer footer-box">
@@ -475,22 +475,22 @@
           <h2>Policies</h2>
           <ul class="footer-policies">
             <li>
-              <a href="/pages/privacy-policy.html" aria-label="View our Privacy Policy" title="Privacy Policy">
+              <a href="/assets/pages/privacy-policy.html" aria-label="View our Privacy Policy" title="Privacy Policy">
                 Privacy Policy
               </a>
             </li>
             <li>
-              <a href="/pages/cookie-policy.html" aria-label="Learn how we use cookies" title="Cookie Policy">
+              <a href="/assets/pages/cookie-policy.html" aria-label="Learn how we use cookies" title="Cookie Policy">
                 Cookie Policy
               </a>
             </li>
             <li>
-              <a href="/pages/terms-and-conditions.html" aria-label="Read our Terms and Conditions" title="Terms and Conditions">
+              <a href="/assets/pages/terms-and-conditions.html" aria-label="Read our Terms and Conditions" title="Terms and Conditions">
                 Terms & Conditions
               </a>
             </li>
             <li>
-              <a href="/pages/popia-notice.html" aria-label="POPIA Compliance Notice" title="POPIA Compliance Notice">
+              <a href="/assets/pages/popia-notice.html" aria-label="POPIA Compliance Notice" title="POPIA Compliance Notice">
                 POPIA Compliance
               </a>
             </li>
@@ -517,12 +517,12 @@
   <div class="credit">
       <p>
         <small>
-          <a href="index.html">CV Civets <span id="year">2024</span></a> | All Rights Reserved
+          <a href="/index.html">CV Civets <span id="year">2024</span></a> | All Rights Reserved
         </small>  
       </p>
       <p>
         <small>
-          Developed By <a href="index.html">Rich/Werx</a> 078 114 8666
+          Developed By <a href="/index.html">Rich/Werx</a> 078 114 8666
         </small>  
       </p>
   </div>
