--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
      <nav aria-label="Main navigation">
       <!-- logo -->
       <div class="logo">
-        <a href="index.html" title="Welcome To Cv Civets" aria-label="Go to homepage">
+        <a href="/index.html" title="Welcome To Cv Civets" aria-label="Go to homepage">
             <img src="/logo.png" alt="CV Civets logo" title="Return Home">
         </a>
       </div>
@@ -164,7 +164,7 @@
               <a class="nav-link scrollto" href="#about" title="Go To About Section" aria-label="Go to About section">About</a>
           </li>
           <li>
-              <a class="nav-link scrollto" href="blog.html" title="Go To Blog Pages" aria-label="Go to Blog page">Blog</a>
+              <a class="nav-link scrollto" href="/blog.html" title="Go To Blog Pages" aria-label="Go to Blog page">Blog</a>
           </li>
           <li>
             <a class="nav-link scrollto" href="#faq" title="Go To FAQ Section" aria-label="Go to FAQ section">FAQ's</a>
@@ -196,7 +196,7 @@
           <div class="buttons">
             <a href="#contact" class="btn" aria-label="get a quote in the contact us section">Get a Free Quote</a>
             <a href="#pricing" class="btn" aria-label="go to the pricing section">See Prices</a>
-            <a href="promotions-fe.html" class="btn" aria-label="go to the pricing section">See Promotions</a>
+            <a href="/promotions-fe.html" class="btn" aria-label="go to the pricing section">See Promotions</a>
         </div>
       </div>
       <div class="hero-video">
@@ -289,8 +289,124 @@
     <h2>Industries <span>worked</span> in</h2>
   </div>
 
-  <div class="slider">
+  <div class="slider" aria-hidden="true">
     <div class="slider-track">
+      <div class="box">
+        <h3>Automotive</h3>
+        <ion-icon name="car-sport-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Retail, Wholesale<br> & Distribution</h3>
+        <ion-icon name="card-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Travel & Hospitality<br> incl. Cruise Ships</h3>
+        <ion-icon name="boat-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Food & Beverage</h3>
+        <ion-icon name="fast-food-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Education incl.<br> TEFL & TESOL Resumés</h3>
+        <ion-icon name="school-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Finance & Accounting</h3>
+        <ion-icon name="key-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Banking</h3>
+        <ion-icon name="cash-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Insurance & Investment</h3>
+        <ion-icon name="bar-chart-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Mining</h3>
+        <ion-icon name="color-fill-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Manufacturing</h3>
+        <ion-icon name="cog-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Engineering</h3>
+        <ion-icon name="build-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Aircraft & Aviation</h3>
+        <ion-icon name="airplane-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>FMCG</h3>
+        <ion-icon name="cart-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Blasting & Explosives</h3>
+        <ion-icon name="flame-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Professional Athletes</h3>
+        <ion-icon name="bicycle-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Recruitment & HR</h3>
+        <ion-icon name="search-circle-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Real Estate</h3>
+        <ion-icon name="home-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Facilities & Property</h3>
+        <ion-icon name="business-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Water & Sanitation</h3>
+        <ion-icon name="water-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>IT & Computer<br> Programming</h3>
+        <ion-icon name="hardware-chip-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Health Care</h3>
+        <ion-icon name="heart-circle-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Pharmaceuticals</h3>
+        <ion-icon name="medical-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Media</h3>
+        <ion-icon name="videocam-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Sales & Marketing</h3>
+        <ion-icon name="stats-chart-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Advertising</h3>
+        <ion-icon name="megaphone-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Telecommunications</h3>
+        <ion-icon name="globe-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Military</h3>
+        <i class="fa fa-fighter-jet" aria-hidden="true"></i>
+      </div>
+      <div class="box">
+        <h3>Farming</h3>
+        <ion-icon name="leaf-outline"></ion-icon>
+      </div>
+      <div class="box">
+        <h3>Legal</h3>
+        <i class="fa fa-balance-scale" aria-hidden="true"></i>
+      </div>
       <div class="box">
         <h3>Automotive</h3>
         <ion-icon name="car-sport-outline"></ion-icon>
@@ -437,7 +553,7 @@
             <p>Follow us on social media for the latest updates, helpful resources, and curated content from across the internet related to job searching, career development, CV writing, LinkedIn profiles, and more.</p>
         </li>
       </ul>
-      <a href="blog.html" class="btn" aria-label="Go to full blog page" title="Go to blog page">Jump to Blog Page</a>
+      <a href="/blog.html" class="btn" aria-label="Go to full blog page" title="Go to blog page">Jump to Blog Page</a>
     </div>
     
 </section>
@@ -776,7 +892,7 @@
           <ul>
               <li><a href="#pricing" class="footer-links">Pricing</a></li>
               <li><a href="#about" class="footer-links">About</a></li>
-              <li><a href="blog.html" class="footer-links">Blog</a></li>
+              <li><a href="/blog.html" class="footer-links">Blog</a></li>
               <li><a href="#testimonials" class="footer-links">Testimonials</a></li>
               <li><a href="#faq" class="footer-links">FAQ's</a></li>
               <li><a href="#contact" class="footer-links">Contact Us</a></li>
@@ -802,22 +918,22 @@
           <h2>Policies</h2>
           <ul class="footer-policies">
             <li>
-              <a href="/assets/pages/privacy-policy.html" aria-label="View our Privacy Policy" title="Privacy Policy">
+              <a href="/pages/privacy-policy.html" aria-label="View our Privacy Policy" title="Privacy Policy">
                 Privacy Policy
               </a>
             </li>
             <li>
-              <a href="/assets/pages/cookie-policy.html" aria-label="Learn how we use cookies" title="Cookie Policy">
+              <a href="/pages/cookie-policy.html" aria-label="Learn how we use cookies" title="Cookie Policy">
                 Cookie Policy
               </a>
             </li>
             <li>
-              <a href="/assets/pages/terms-and-conditions.html" aria-label="Read our Terms and Conditions" title="Terms and Conditions">
+              <a href="/pages/terms-and-conditions.html" aria-label="Read our Terms and Conditions" title="Terms and Conditions">
                 Terms & Conditions
               </a>
             </li>
             <li>
-              <a href="/assets/pages/popia-notice.html" aria-label="POPIA Compliance Notice" title="POPIA Compliance Notice">
+              <a href="/pages/popia-notice.html" aria-label="POPIA Compliance Notice" title="POPIA Compliance Notice">
                 POPIA Compliance
               </a>
             </li>
@@ -844,12 +960,12 @@
   <div class="credit">
       <p>
         <small>
-          <a href="index.html">CV Civets <span id="year">2024</span></a> | all rights reserved
+          <a href="/index.html">CV Civets <span id="year">2024</span></a> | all rights reserved
         </small>  
       </p>
       <p>
         <small>
-          developed by <a href="index.html">Rich/Werx</a> 078 114 8666
+          developed by <a href="/index.html">Rich/Werx</a> 078 114 8666
         </small>  
       </p>
   </div>
