--- a/promotions-he.html
+++ b/promotions-he.html
@@ -96,7 +96,7 @@
      <nav>
       <!-- logo -->
       <div class="logo">
-        <a href="index.html" title="Welcome To Cv Civets" aria-label="Go to homepage">
+        <a href="/index.html" title="Welcome To Cv Civets" aria-label="Go to homepage">
             <img src="/logo.png" alt="CV Civets logo" title="Return Home">
         </a>
       </div>
@@ -109,10 +109,10 @@
       <div id="navbar" class="navbar" aria-label="Main navigation">
         <ul>
           <li>
-              <a class="nav-link scrollto active" href="index.html">Home</a>
+              <a class="nav-link scrollto active" href="/index.html">Home</a>
           </li>
           <li>
-              <a class="nav-link scrollto" href="blog.html">Blog</a>
+              <a class="nav-link scrollto" href="/blog.html">Blog</a>
           </li>
           <li>
               <a class="nav-link scrollto" href="#links-container">Contact</a>
@@ -147,7 +147,7 @@
           <p>Now <br> R450</p>
         </div>
         <p class="save">Save R175</p>
-        <a class="btn" href="./promotions.html#contact">Get A Quote</a>
+        <a class="btn" href="#contact">Get A Quote</a>
       </div>
       <div class="video-box">
         <video class="promo-video" autoplay loop muted>
@@ -232,8 +232,8 @@
         <div class="quick-links footer-box">
             <h2>Quick Links</h2>
             <ul>
-                <li><a href="index.html" class="footer-links" aria-label="Go To Home page" title="Go To Home page">Home</a></li>
-                <li><a href="blog.html" class="footer-links" aria-label="Go To Blog page" title="Go To Blog page">Blog Pages</a></li>
+                <li><a href="/index.html" class="footer-links" aria-label="Go To Home page" title="Go To Home page">Home</a></li>
+                <li><a href="/blog.html" class="footer-links" aria-label="Go To Blog page" title="Go To Blog page">Blog Pages</a></li>
             </ul>
         </div>
         <div class="contact-footer footer-box">
@@ -256,22 +256,22 @@
           <h2>Policies</h2>
           <ul class="footer-policies">
             <li>
-              <a href="/pages/privacy-policy.html" aria-label="View our Privacy Policy" title="Privacy Policy">
+              <a href="/assets/pages/privacy-policy.html" aria-label="View our Privacy Policy" title="Privacy Policy">
                 Privacy Policy
               </a>
             </li>
             <li>
-              <a href="/pages/cookie-policy.html" aria-label="Learn how we use cookies" title="Cookie Policy">
+              <a href="/assets/pages/cookie-policy.html" aria-label="Learn how we use cookies" title="Cookie Policy">
                 Cookie Policy
               </a>
             </li>
             <li>
-              <a href="/pages/terms-and-conditions.html" aria-label="Read our Terms and Conditions" title="Terms and Conditions">
+              <a href="/assets/pages/terms-and-conditions.html" aria-label="Read our Terms and Conditions" title="Terms and Conditions">
                 Terms & Conditions
               </a>
             </li>
             <li>
-              <a href="/pages/popia-notice.html" aria-label="POPIA Compliance Notice" title="POPIA Compliance Notice">
+              <a href="/assets/pages/popia-notice.html" aria-label="POPIA Compliance Notice" title="POPIA Compliance Notice">
                 POPIA Compliance
               </a>
             </li>
@@ -298,12 +298,12 @@
     <div class="credit">
       <p>
         <small>
-          <a href="index.html">CV Civets <span id="year">2024</span></a> | All Rights Reserved
+          <a href="/index.html">CV Civets <span id="year">2024</span></a> | All Rights Reserved
         </small>  
       </p>
       <p>
         <small>
-          Developed By <a href="index.html">Rich/Werx</a> 078 114 8666
+          Developed By <a href="/index.html">Rich/Werx</a> 078 114 8666
         </small>  
       </p>
   </div>
