--- a/public/assets/pages/popia-notice.html
+++ b/public/assets/pages/popia-notice.html
@@ -122,7 +122,7 @@
   <nav aria-label="Main navigation">
       <!-- logo -->
       <div class="logo">
-        <a href="index.html" title="Welcome To Cv Civets" aria-label="Go to homepage">
+        <a href="/index.html" title="Welcome To Cv Civets" aria-label="Go to homepage">
             <img src="/logo.png" alt="CV Civets logo" title="Return Home">
         </a>
       </div>
@@ -135,11 +135,11 @@
       <div id="navbar" class="navbar">
         <ul>
             <li>
-                <a class="nav-link scrollto active" href="index.html" title="Go To Home Page" aria-label="Home page">Home</a>
+                <a class="nav-link scrollto active" href="/index.html" title="Go To Home Page" aria-label="Home page">Home</a>
             </li>
             
             <li>
-                <a class="nav-link scrollto" href="blog.html" title="Go To Blog Page" aria-label="Go To Blog Pages">Blog</a>
+                <a class="nav-link scrollto" href="/blog.html" title="Go To Blog Page" aria-label="Go To Blog Pages">Blog</a>
             </li>
             
         </ul>
@@ -207,8 +207,8 @@
       <div class="quick-links footer-box">
           <h2>Quick Links</h2>
             <ul>
-                <li><a href="index.html" class="footer-links" title="Go To Home Page" aria-label="Go to Home page">Home</a></li>
-                <li><a href="blog.html" class="#posts" title="Go To Blog Pages" aria-label="Go to Blog page">Blog Posts</a></li>
+                <li><a href="/index.html" class="footer-links" title="Go To Home Page" aria-label="Go to Home page">Home</a></li>
+                <li><a href="/blog.html" class="#posts" title="Go To Blog Pages" aria-label="Go to Blog page">Blog Posts</a></li>
             </ul>
       </div>
       <div class="contact-footer footer-box">
@@ -273,12 +273,12 @@
   <div class="credit">
       <p>
         <small>
-          <a href="index.html">CV Civets <span id="year">2024</span></a> | All Rights Reserved
+          <a href="/index.html">CV Civets <span id="year">2024</span></a> | All Rights Reserved
         </small>  
       </p>
       <p>
         <small>
-          Developed by <a href="index.html">Rich/Werx</a> 078 114 8666
+          Developed by <a href="/index.html">Rich/Werx</a> 078 114 8666
         </small>  
       </p>
   </div>
