--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
     <!-- sitemap -->
     <link rel="sitemap" type="application/xml" href="/sitemap.xml">
 
+    <!-- cdn gsap loader quick fire -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <!-- Fonts and Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,6 +66,15 @@
 
     <!-- CDN Links-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+
+    <!-- Microsoft Clarity -->
+    <script>
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/syc212cfgu";
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "syc212cfgu");
+    </script>
     <!-- Analytics and Tag Manager -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QGKLBTG66P"></script>
     <!-- Other head scripts if needed -->
@@ -856,6 +868,8 @@
 <section class="contact" id="contact" aria-label="Contact Us">
   <div class="title">
     <h2><span>Contact</span> Us</h2>
+    <p>Please note that we are not a recruitment agency and do not source jobs for candidates;<br> we specialise solely in professional CV writing.<br> 
+      If you message us asking for a job, you won’t get a reply.</p>
   </div>
   <form id="contactForm" action="https://api.web3forms.com/submit" method="POST" aria-label="Contact form">
     <fieldset>
@@ -872,9 +886,11 @@
       <label for="number" class="sr-only">Contact Number</label>
       <input type="tel" id="number" name="number" autocomplete="tel" placeholder="Contact Number" required>
     </fieldset>
+
     <fieldset>
       <label for="message" class="sr-only">Message</label>
-      <textarea name="message" id="message" cols="30" rows="10" placeholder="Please type your message here..." required></textarea>
+      <textarea name="message" id="message" cols="30" rows="10" placeholder="How may we assist you today?" required></textarea>
+      <p>We are not a recruitment agency and we have <span><strong>NO JOB</strong></span> vacancies.</p>
       <button type="submit" class="btn">Send Message</button>
     </fieldset>
   </form>
@@ -918,22 +934,22 @@
           <h2>Policies</h2>
           <ul class="footer-policies">
             <li>
-              <a href="/pages/privacy-policy.html" aria-label="View our Privacy Policy" title="Privacy Policy">
+              <a href="/assets/pages/privacy-policy.html" aria-label="View our Privacy Policy" title="Privacy Policy">
                 Privacy Policy
               </a>
             </li>
             <li>
-              <a href="/pages/cookie-policy.html" aria-label="Learn how we use cookies" title="Cookie Policy">
+              <a href="/assets/pages/cookie-policy.html" aria-label="Learn how we use cookies" title="Cookie Policy">
                 Cookie Policy
               </a>
             </li>
             <li>
-              <a href="/pages/terms-and-conditions.html" aria-label="Read our Terms and Conditions" title="Terms and Conditions">
+              <a href="/assets/pages/terms-and-conditions.html" aria-label="Read our Terms and Conditions" title="Terms and Conditions">
                 Terms & Conditions
               </a>
             </li>
             <li>
-              <a href="/pages/popia-notice.html" aria-label="POPIA Compliance Notice" title="POPIA Compliance Notice">
+              <a href="/assets/pages/popia-notice.html" aria-label="POPIA Compliance Notice" title="POPIA Compliance Notice">
                 POPIA Compliance
               </a>
             </li>
@@ -971,18 +987,15 @@
   </div>
   </footer>
   <!-- footer section ends -->
- <!-- back to top button -->
-<div id="progress" role="button" tabindex="0" aria-label="Back to top" title="Back To The Top Of The Page">
-  <span id="progress-value">
-    <ion-icon name="chevron-up-outline"></ion-icon>
-  </span>
-</div>
+  <!-- back to top button -->
+  <div id="progress" role="button" tabindex="0" aria-label="Back to top" title="Back To The Top Of The Page">
+    <span id="progress-value">
+      <ion-icon name="chevron-up-outline"></ion-icon>
+    </span>
+  </div>
 
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script type="module" src="/src/mcjs.js"></script>
-  <script type="module" src="/src/gtag-init.js"></script>
-  <script type="module" src="/src/contact-form-handler.js"></script>
-  <script type="module" src="/src/loader.js"></script>
-  <script type="module" src="/src/main.js"></script>
+<!-- Inline js scripts   -->
+<script type="module" src="/src/loader.js"></script>
+<script type="module" src="/src/main.js"></script>
 </body>
 </html>
