--- a/thank-you.html
+++ b/thank-you.html
@@ -256,8 +256,8 @@
   </span>
 </div>
 
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script type="module" src="/src/mcjs.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- <script type="module" src="/src/mcjs.js"></script> -->
   <script type="module" src="/src/loader.js"></script>
   <script type="module" src="/src/main.js"></script>
 </body>
